Fixed bug with collapsing header and footer, changes size images grid movies

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,10 @@ body {
     text-decoration: none;
   }
 
+  #__next {
+    @apply h-screen
+  }
+
   body {
     @apply bg-primary-dark min-h-screen w-full;
   }
